// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <app-task>
    <div
      class="list-item TASK_ARCHIVED"
    >
      <label
        class="checkbox"
      >
        <input
          checked=""
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
      </div>
    </div>
  </app-task>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Task Default 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <app-task>
    <div
      class="list-item Task_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-task>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Task Pinned 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <app-task>
    <div
      class="list-item TASK_PINNED"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-task>
</storybook-dynamic-app-root>
`;
